Test: 페이지네이션 도입으로 인한 테스트 수정 - getDocListWithPreview()