@@ -26,6 +26,7 @@ import io.ejangs.docsa.domain.save.dao.mongodb.SaveContentRepository;
 import io.ejangs.docsa.domain.save.dao.mysql.SaveRepository;
 import io.ejangs.docsa.domain.save.document.SaveContent;
 import io.ejangs.docsa.domain.save.entity.Save;
+import io.ejangs.docsa.domain.save.util.PageableFactory;
 import io.ejangs.docsa.domain.user.dao.mysql.UserRepository;
 import io.ejangs.docsa.domain.user.entity.User;
 import io.ejangs.docsa.global.exception.CustomException;
@@ -40,6 +41,8 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
@@ -227,21 +230,23 @@ public class DocServiceIntegrationTests {
                 saveContentRepository, commitBlockSequenceRepository, blockRepository);
         docRepository.saveAll(docs);
 
+        Pageable pageable = PageableFactory.create("updatedAt", "desc", 0, 10);
+
         // when
-        List<DocListResponse> results = docService.getList(user.getId());
+        Page<DocListResponse> results = docService.getList(user.getId(), pageable);
 
         // then
-        assertEquals(2, results.size());
+        assertEquals(2, results.getContent().size());
 
-        DocListResponse first = results.get(0);  // updatedAt 기준 최신
-        DocListResponse second = results.get(1);
+        DocListResponse first = results.getContent().getFirst();  // updatedAt 기준 최신
+        DocListResponse second = results.getContent().get(1);
 
-        assertEquals("문서 1", first.title());
-        assertEquals(RecentType.COMMIT, first.recent().recentType());
-        assertTrue(first.preview().startsWith("문단 5: 몰라어쩌구저꺼궁롱ㄹ라알이;ㅇㄹ")); // preview 포함
+        assertEquals("문서 1", second.title());
+        assertEquals(RecentType.COMMIT, second.recent().recentType());
+        assertTrue(second.preview().startsWith("문단 5: 몰라어쩌구저꺼궁롱ㄹ라알이;ㅇㄹ")); // preview 포함
 
-        assertEquals("문서 2", second.title());
-        assertEquals(RecentType.SAVE, second.recent().recentType());
-        assertTrue(second.preview().startsWith("문단 3: 테스트 코드가 너무 싫어서 미치겠다는 문단")); // preview 포함
+        assertEquals("문서 2", first.title());
+        assertEquals(RecentType.SAVE, first.recent().recentType());
+        assertTrue(first.preview().startsWith("문단 3: 테스트 코드가 너무 싫어서 미치겠다는 문단")); // preview 포함
     }
 }
